fix acct buttons alignment when user is not signed in

--- a/react-app/src/components/LovesDropDown/index.css
+++ b/react-app/src/components/LovesDropDown/index.css
@@ -1,10 +1,10 @@
 .loves-dropdown-container {
-  width: 100px;
+  width: 45px;
   /* height: 50px; */
   /* border: 1px solid green; */
   /* background-color: white; */
   /* border: 1px solid green; */
-  height: 100px;
+  /* height: 100px; */
   display: flex;
   align-items: center;
 }
@@ -37,6 +37,7 @@
     /* width: 375px; */
     width: 300px;
     height: 215px;
+    /* transition:all .2s linear 0s; */
     /* transition: all 100s ease-in 0s; */
     /* transition-property: all; */
     top: 77px;
